# keympostor

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  settings.toml
benches/: bench_transform_map.rs  benchmarks.rs
cli/: Cargo.toml
cli/src/: main.rs
keyboard/: Cargo.toml
keyboard/src/: bit256.rs  key.rs  key_action.rs  key_const.rs  key_event.rs  key_hook.rs  key_map.rs  key_modifiers.rs  key_transform.rs  key_transform_map.rs  key_transform_rule.rs  key_trigger.rs  keyboard_state.rs  keys.rs  lib.rs  toml.rs  transform_map.rs  transform_rule.rs  transform_rules.rs  util.rs
lib/: Cargo.toml
lib/benches/: benchmarks.rs
lib/etc/test_data/layouts/: game.toml  minimal.toml  test.toml
lib/etc/test_data/profiles/: bad.toml  minimal.toml  test.toml
lib/src/: action.rs  error.rs  event.rs  gen.rs  hook.rs  input.rs  key.rs  key_code.rs  keyboard.rs  layout.rs  lib.rs  modifiers.rs  mouse.rs  notify.rs  profile.rs  rule.rs  rules.rs  sc.rs  state.rs  transform.rs  transition.rs  trigger.rs  util.rs  utils.rs  vk.rs  win_watch.rs  win_watcher.rs  win_watcher_a.rs
lib/src/keyboard/: action.rs  code.rs  consts.rs  error.rs  event.rs  gen.rs  handler.rs  hook.rs  input.rs  key.rs  key_action.rs  key_event.rs  key_handler.rs  key_hook.rs  key_modifiers.rs  modifiers.rs  parse.rs  rules.rs  sc.rs  serialize.rs  transform.rs  transform_map.rs  transform_rules.rs  transition.rs  trigger.rs  vk.rs
lib/src/mouse/: hook.rs
profiles/: default.json  default.toml  game.kmp  game.toml  game.yaml
res/: app.manifest  resources.rc  resources.toml  strings.json  strings.toml
run/: config.toml  kb_lighting.toml  profiles.toml  settings.toml  test-field.txt
run/install/: install.bat  task.xml
run/layouts/: default.toml  game.toml  ide.toml  minvert.toml
run/profiles/: default.toml  game.toml
run/res/: resources.toml
src/: config.rs  key_action.rs  key_code.rs  key_event.rs  key_hook.rs  key_id.rs  key_modifier.rs  key_transition.rs  keyboard.rs  lib.rs  main.rs  profile.rs  res.rs  res_ids.rs  settings.rs  transform.rs  ui.rs  ui_log_view.rs  ui_main_menu.rs  ui_profile_view.rs  ui_tray.rs  util.rs
src/keyboard/: key.rs  key_action.rs  key_const.rs  key_event.rs  key_hook.rs  key_modifiers.rs  key_trigger.rs  parse.rs  serialize.rs  transform_map.rs  transform_matrix.rs  transform_rules.rs
src/res/: res_ids.rs
src/ui/: ui_log_view.rs  ui_main.rs  ui_main_menu.rs  ui_profile_view.rs  ui_profiles_menu.rs  ui_tray.rs  ui_util.rs  win_watcher.rs
test/profiles/: game.toml  minimal.toml  q_key.json  q_key_press.json  test.json  test.toml  test.yaml
ui/: Cargo.toml  build.rs
ui/etc/test_data/layouts/: bad.toml  test.toml
ui/res/: app.manifest  resources.rc
ui/src/: app.rs  indicator.rs  kb_light.rs  kb_watch.rs  kblight.rs  key_handler.rs  layout.rs  main.rs  profile.rs  res.rs  settings.rs  ui.rs  util.rs  utils.rs  win_watch.rs
ui/src/res/: res_ids.rs
ui/src/ui/: app_ui.rs  layout_view.rs  layouts_menu.rs  log_view.rs  main_menu.rs  main_window.rs  profile_view.rs  profiles_menu.rs  res.rs  res_ids.rs  style.rs  test_editor.rs  tray.rs  ui_log_view.rs  ui_main.rs  ui_main_menu.rs  ui_profiles_menu.rs  utils.rs
