[package]
name = "keympostor"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies]
keyboard = { path = "./keyboard" }
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Media", "Win32_Media_Audio"] }
native-windows-gui = { version = "1.0.13" }
serde = { version = "1.0.219", features = ["derive"] }
log = { version = "0.4.27"}
simple_logger ={version = "5.0.0"}
toml = "0.8.22"

[features]
dev = []

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmarks"
harness = false