[package]
name = "keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Media", "Win32_Media_Audio"] }
serde = { version = "1.0.219", features = ["derive"] }
