[package]
name = "keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = { version = "5.0.0" }
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Media", "Win32_Media_Audio"] }
serde_yaml = "0.9.34+deprecated"
