[package]
name = "lib"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
name = "keympostor"
#crate-type = ["cdylib"] # for dll

[dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Threading"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
fxhash = "0.2"
log = "0.4"
phf = { version = "0.13.1", features = ["macros"] }

[features]
no_mouse = []

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false
