[package]
name = "ui"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "keympostorw"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
native-windows-gui = "1"
windows = "0.62.2"
log = "0.4"
simple_logger = "5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"

[build-dependencies]
embed-resource = "3"

[features]
dev = []
console = []

