[package]
name = "ui"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "keympostorw"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
native-windows-gui = "1"
windows = { version = "0.62.2", features = ["Win32_UI_Controls", "Win32_Graphics_Gdi"] }
log = "0.4"
simple_logger = "5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
regex = "1.12.2"
winapi = "0.3.9"

[build-dependencies]
embed-resource = "3"

[features]
debug = []
console = []

