[package]
name = "ui"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "keympostor"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
lomen-core = { path = "../../lomen/lomen-core" }
native-windows-gui = "1.0.13"
windows = { version = "0.62.2", features = ["Win32_UI_Controls", "Win32_Graphics_Gdi", "Win32_Media", "Win32_Media_Audio", "Win32_System_LibraryLoader", "Win32_Globalization"] }
log = "0.4.28"
simple_logger = "5.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
regex = "1.12.2"

[build-dependencies]
embed-resource = "3"

[features]
debug = []
console = []

